versions/3.0.4/docs/Volume.md
# Volume

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **int** |  | [optional] [readonly] 
**name** | **str** |  | [optional] 
**path** | **str** |  | [optional] [readonly] 
**nodes** | **list[int]** |  | 
**display_name** | **str** |  | [optional] 
**visual_tag** | **str** |  | [optional] 
**is_default** | **bool** |  | [optional] 
**use_for_homes** | **bool** |  | [optional] 
**use_for_workspaces** | **bool** |  | [optional] 
**type** | **str** |  | [optional] 
**snm_enabled** | **bool** |  | [optional] 
**snfs_name** | **str** |  | [optional] 
**simulated_quotas** | **bool** |  | [optional] 
**fs_properties** | [**FSProperties**](FSProperties.md) |  | [optional] 
**backend** | [**Backend**](Backend.md) |  | [optional] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


