versions/3.5.0/docs/Volume.md
# Volume


## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **int** |  | 
**nodes** | **[int]** |  | 
**backend** | [**Backend**](Backend.md) |  | 
**path** | **str** |  | [optional] 
**display_name** | **str** |  | [optional] 
**visual_tag** | **str, none_type** |  | [optional] 
**is_default** | **bool** |  | [optional] 
**use_for_homes** | **bool** |  | [optional] 
**use_for_workspaces** | **bool** |  | [optional] 
**type** | **str** |  | [optional] 
**snm_enabled** | **bool** |  | [optional] 
**snfs_name** | **str, none_type** |  | [optional] 
**simulated_quotas** | **bool** |  | [optional] 
**fs_properties** | [**FSProperties**](FSProperties.md) |  | [optional] 
**status** | [**VolumeStatus**](VolumeStatus.md) |  | [optional] 
**cloud_account** | **int, none_type** |  | [optional] 
**name** | **str, none_type** |  | [optional] [readonly] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


